--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <main>
                     <h1>Easy Shopping Via Mobile</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio tempora error deserunt aperiam enim adipisci nesciunt, 
-                        velit ducimus, itaque nulla soluta corrupti in sapiente illum voluptatum aliquam possimus dolore consequatur.
+                        velit ducimus, itaque nulla soluta corrupti in sapiente illum voluptatum aliquam possimus.
                     </p>
                     <button class="button-main">Get started</button>
                 </main>
