--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="wrapper">
             <section class="container-left">
                 <main>
-                    <h1>Easy Shopping Via Mobile</h1>
+                    <h1>EASY SHOPPING VIA MOBILE</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio tempora error deserunt aperiam enim adipisci nesciunt, 
                         velit ducimus, itaque nulla soluta corrupti in sapiente illum voluptatum aliquam possimus.
                     </p>
