--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         
-        <title>Projeto Responsividade - CSS</title>
+        <title>Projeto Responsividade - Alteracao do tema</title>
 
         <link href="styles.css" rel="stylesheet">
 
